Fix spacing of content area to match fixed header

--- a/src/main.css
+++ b/src/main.css
@@ -8,7 +8,7 @@
     justify-content: flex-start;
     align-content: flex-start;
     align-items: flex-start;
-    top: 50px;
+    margin-top: 50px;
     background-color: gray;
 }
 .photodiv {
